refactor: migrate to 1.20.1